[package]
name = "wallpaper-changer"
version = "0.1.0"
authors = ["Gustavo Murayama <gmurayama@outlook.com>",
           "Lucas Tornai <lucas.tornai00@gmail.com>"]
edition = "2018"

[dependencies]
wallpaper = "2.0.1"
chrono = "0.4"
serde = { version = "1.0.85", features = ["derive"] }
serde_json = "1.0.38"
structopt = { version = "0.2", default-features = false }